UI  alignment fixes #3342 and #3387
UI alignment fixes #3342 and #3387

--- a/participant-manager/src/assets/css/root.scss
+++ b/participant-manager/src/assets/css/root.scss
@@ -1567,6 +1567,7 @@ select {
   display: inline-block;
   border-radius: 58px;
   line-height: 100%;
+  vertical-align: text-top;
 }
 .deactivated_text {
   color: var(--light-red);
